# Classifier

./: .gitignore  CMakeLists.txt  README.md
include/: classifier.hpp  gaussian_nb.hpp  knn.hpp  types.hpp
python/classifier/: __init__.py
src/: bindings.cpp  gaussian_nb.cpp  knn.cpp
